test/Fail/FunSort-X-SSetOmega-SetOmega.err
FunSort-X-SSetOmega-SetOmega.agda:6.13-18: error: [UnequalSorts]
Setω != funSort _3 SSetω
when checking that the expression A → B has type Setω
